[package]
name = "kanu"
description = "Kanu is a rust ORM"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/kanu/latest/"
repository = "https://github.com/AlexeyNavalniyPrinted/kanu"

[dependencies]
syn = { version = "2.0.72", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"

[lib]
proc-macro = true